force-app/main/default/objects/Survey__c/fields/Life_Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Life_Insurance_Type__c</fullName>
    <label>Life Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Uninsured</fullName>
            </value>
            <value>
                <fullName>Insured by Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>