force-app/main/default/objects/Survey__c/fields/Living_Cost__c.field-meta.xml
<CustomField>
    <fullName>Living_Cost__c</fullName>
    <label>Living Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>