force-app/main/default/objects/Survey__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lokasi Asset Jaminan</fullName>
            </value>
            <value>
                <fullName>Lokasi Usaha</fullName>
            </value>
            <value>
                <fullName>Tempat lain (Isi manual)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>