force-app/main/default/objects/Survey__c/fields/Lokasi_usaha__c.field-meta.xml
<CustomField>
    <fullName>Lokasi_usaha__c</fullName>
    <label>Lokasi usaha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lokasi_usaha</valueSetName>
    </valueSet>
</CustomField>