force-app/main/default/objects/Survey__c/fields/Luas_Bangunan__c.field-meta.xml
<CustomField>
    <fullName>Luas_Bangunan__c</fullName>
    <label>Luas Bangunan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>