force-app/main/default/objects/Survey__c/fields/Luas_Tanah__c.field-meta.xml
<CustomField>
    <fullName>Luas_Tanah__c</fullName>
    <label>Luas Tanah</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>