force-app/main/default/objects/Survey__c/fields/Masa_Berlaku_SHGB__c.field-meta.xml
<CustomField>
    <fullName>Masa_Berlaku_SHGB__c</fullName>
    <label>Masa Berlaku SHGB</label>
    <type>Date</type>
</CustomField>