force-app/main/default/objects/Survey__c/fields/Maximal_Interest_Billing__c.field-meta.xml
<CustomField>
    <fullName>Maximal_Interest_Billing__c</fullName>
    <label>Maximal Interest Billing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>