force-app/main/default/objects/Survey__c/fields/Meet_With__c.field-meta.xml
<CustomField>
    <fullName>Meet_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>