force-app/main/default/objects/Survey__c/fields/Metode_Pembayaran_TDP__c.field-meta.xml
<CustomField>
    <fullName>Metode_Pembayaran_TDP__c</fullName>
    <label>Metode Pembayaran TDP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Transfer Bank</fullName>
                <isActive>false</isActive>
                <label>Transfer Bank</label>
            </value>
            <value>
                <fullName>Tunai</fullName>
                <isActive>false</isActive>
                <label>Tunai</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>