force-app/main/default/objects/Survey__c/fields/Model_Hak_Tanggungan__c.field-meta.xml
<CustomField>
    <fullName>Model_Hak_Tanggungan__c</fullName>
    <label>Model Hak Tanggungan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NTF Pengajuan</fullName>
            </value>
            <value>
                <fullName>LTV Maksimal</fullName>
                <isActive>false</isActive>
                <label>LTV Maksimal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>