force-app/main/default/objects/Survey__c/fields/Model_Sertipikat__c.field-meta.xml
<CustomField>
    <fullName>Model_Sertipikat__c</fullName>
    <label>Model Sertipikat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>