force-app/main/default/objects/Survey__c/fields/Monthly_Installment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Installment__c</fullName>
    <label>Monthly Installment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>