force-app/main/default/objects/Survey__c/fields/Nama_usaha__c.field-meta.xml
<CustomField>
    <fullName>Nama_usaha__c</fullName>
    <label>Nama usaha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>