force-app/main/default/objects/Survey__c/fields/Neraca_Keuangan_Terlampir__c.field-meta.xml
<CustomField>
    <fullName>Neraca_Keuangan_Terlampir__c</fullName>
    <label>Neraca Keuangan Terlampir?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>