force-app/main/default/objects/Survey__c/fields/Net_Yield__c.field-meta.xml
<CustomField>
    <fullName>Net_Yield__c</fullName>
    <label>Net Yield</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>