force-app/main/default/objects/Survey__c/fields/Nilai_Bangunan_Formula__c.field-meta.xml
<CustomField>
    <fullName>Nilai_Bangunan_Formula__c</fullName>
    <formula>IF(
    OR(ISBLANK(Jumlah_lantai_bangunan__c), Jumlah_lantai_bangunan__c = 0),
    0,
    IF(
      Jumlah_lantai_bangunan__c &gt; 1,
      Luas_Bangunan__c * 5000000 * Jumlah_lantai_bangunan__c,
      Luas_Bangunan__c * 3500000
   )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nilai Bangunan Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>