force-app/main/default/objects/Survey__c/fields/Nilai_Hak_Tanggungan__c.field-meta.xml
<CustomField>
    <fullName>Nilai_Hak_Tanggungan__c</fullName>
    <label>Nilai Hak Tanggungan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>