force-app/main/default/objects/Survey__c/fields/Nilai_Pasar__c.field-meta.xml
<CustomField>
    <fullName>Nilai_Pasar__c</fullName>
    <label>Nilai Pasar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>