force-app/main/default/objects/Survey__c/fields/NJOP_Average_Data_pembanding__c.field-meta.xml
<CustomField>
    <fullName>NJOP_Average_Data_pembanding__c</fullName>
    <formula>( NJOP_Estimasi_Harga_Pembanding_1__c +  NJOP_Estimasi_Harga_Pembanding_2__c +  NJOP_Estimasi_Harga_Pembanding_3__c )/3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Data pembanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>