force-app/main/default/objects/Survey__c/fields/NJOP_LTV__c.field-meta.xml
<CustomField>
    <fullName>NJOP_LTV__c</fullName>
    <formula>Opportunity__r.NTF_Pengajuan__c /   NJOP_untuk_perhitungan_PBB__c/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTV</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>