force-app/main/default/objects/Survey__c/fields/NJOP_Maksimum_LTV__c.field-meta.xml
<CustomField>
    <fullName>NJOP_Maksimum_LTV__c</fullName>
    <label>Maksimum LTV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>