force-app/main/default/objects/Survey__c/fields/NJOP_Sumber_Data_Pembanding_1__c.field-meta.xml
<CustomField>
    <fullName>NJOP_Sumber_Data_Pembanding_1__c</fullName>
    <label>Sumber Data Pembanding 1</label>
    <type>Url</type>
</CustomField>