force-app/main/default/objects/Survey__c/fields/NJOP_Sumber_Data_Pembanding_2__c.field-meta.xml
<CustomField>
    <fullName>NJOP_Sumber_Data_Pembanding_2__c</fullName>
    <label>Sumber Data Pembanding 2</label>
    <type>Url</type>
</CustomField>