force-app/main/default/objects/Survey__c/fields/NJOP_untuk_perhitungan_PBB__c.field-meta.xml
<CustomField>
    <fullName>NJOP_untuk_perhitungan_PBB__c</fullName>
    <description>Coba</description>
    <label>NJOP untuk perhitungan PBB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>