force-app/main/default/objects/Survey__c/fields/NJOP_Warn_80percent__c.field-meta.xml
<CustomField>
    <fullName>NJOP_Warn_80percent__c</fullName>
    <formula>IF( OR(NJOP_LTV__c*100 &gt; 80/100,  Opportunity__r.NTF_Pengajuan__c &gt; 500000000), &quot;LTV-Over&quot;, &quot;&quot;)</formula>
    <label>[NJOP] warn80</label>
    <type>Text</type>
</CustomField>