force-app/main/default/objects/Survey__c/fields/No_Virtual_Account__c.field-meta.xml
<CustomField>
    <fullName>No_Virtual_Account__c</fullName>
    <label>No Virtual Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>