force-app/main/default/objects/Survey__c/fields/Nomor_IMB__c.field-meta.xml
<CustomField>
    <fullName>Nomor_IMB__c</fullName>
    <label>Nomor IMB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>