force-app/main/default/objects/Survey__c/fields/Nomor_Kontrak__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Kontrak__c</fullName>
    <label>Nomor Kontrak</label>
    <length>255</length>
    <type>Text</type>
</CustomField>