force-app/main/default/objects/Survey__c/fields/Nomor_Telepon_Perusahaan__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Telepon_Perusahaan__c</fullName>
    <label>Nomor Telepon Perusahaan</label>
    <length>32</length>
    <type>Text</type>
</CustomField>