force-app/main/default/objects/Survey__c/fields/NTF_Pengajuan__c.field-meta.xml
<CustomField>
    <fullName>NTF_Pengajuan__c</fullName>
    <formula>Opportunity__r.NTF_Pengajuan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NTF Pengajuan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>