force-app/main/default/objects/Survey__c/fields/Omset_Per_Bulan__c.field-meta.xml
<CustomField>
    <fullName>Omset_Per_Bulan__c</fullName>
    <label>Omset Per Bulan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>