force-app/main/default/objects/Survey__c/fields/Operating_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Operating_Profit_Margin__c</fullName>
    <label>Operating Profit Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>