force-app/main/default/objects/Survey__c/fields/Other_Business_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Business_Company_Name__c</fullName>
    <label>Other Business Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>