force-app/main/default/objects/Survey__c/fields/Other_Business_Economy_Sector__c.field-meta.xml
<CustomField>
    <fullName>Other_Business_Economy_Sector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Economy Sector</label>
    <referenceTo>Master_Economy_Sector__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>