force-app/main/default/objects/Survey__c/fields/Other_Business_Industry_Group_Text__c.field-meta.xml
<CustomField>
    <fullName>Other_Business_Industry_Group_Text__c</fullName>
    <label>Other Business Industry Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>