force-app/main/default/objects/Survey__c/fields/Other_Business_Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Business_Industry_Type__c</fullName>
    <label>Industry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PEGAWAI SWASTA</fullName>
            </value>
            <value>
                <fullName>PENGOLAHAN LAINNYA</fullName>
            </value>
            <value>
                <fullName>DAUR ULANG BARANG-BARANG BUKAN LOGAM</fullName>
            </value>
            <value>
                <fullName>DAUR ULANG BARANG-BARANG LOGAM</fullName>
            </value>
            <value>
                <fullName>AKUMULATIR LISTRIK &amp; BATU BATERAI</fullName>
            </value>
            <value>
                <fullName>SEPATU/ALAS KAKI</fullName>
            </value>
            <value>
                <fullName>ALAS KAKI</fullName>
            </value>
            <value>
                <fullName>ALAT ANGKUT YANG LAINNYA</fullName>
            </value>
            <value>
                <fullName>ALAT TRANMISI KOMUNIKASI</fullName>
            </value>
            <value>
                <fullName>BARANG DARI LOGAM UNTUK PERTANIAN, PERTUKANGAN &amp; PEMOTONGAN</fullName>
            </value>
            <value>
                <fullName>PRODUKSI OBAT</fullName>
            </value>
            <value>
                <fullName>OBAT, FARMASI &amp; JAMU</fullName>
            </value>
            <value>
                <fullName>BAHAN BAKU PEMBERANTAS HAMA &amp; ZAT PENGATUR TUMBUH</fullName>
            </value>
            <value>
                <fullName>BAHAN KIMIA &amp; BARANG KIMIA LAINNYA</fullName>
            </value>
            <value>
                <fullName>ANGKUTAN LAUT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>