force-app/main/default/objects/Survey__c/fields/Other_Business_Industry_Type_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Other_Business_Industry_Type_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry Type</label>
    <referenceTo>API_Industry_Group_and_Type__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>