force-app/main/default/objects/Survey__c/fields/Other_Business_Monthly_Income_Omset__c.field-meta.xml
<CustomField>
    <fullName>Other_Business_Monthly_Income_Omset__c</fullName>
    <label>Monthly Income/Omset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>