force-app/main/default/objects/Survey__c/fields/Owner_Fullname__c.field-meta.xml
<CustomField>
    <fullName>Owner_Fullname__c</fullName>
    <description>naik</description>
    <formula>Opportunity__r.Owner_Fullname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Fullname</label>
    <type>Text</type>
</CustomField>