force-app/main/default/objects/Survey__c/fields/Pencairan_Minimal__c.field-meta.xml
<CustomField>
    <fullName>Pencairan_Minimal__c</fullName>
    <label>Pencairan Minimal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>