force-app/main/default/objects/Survey__c/fields/Penggunaan_Dana_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Penggunaan_Dana_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Penggunaan Dana</label>
    <referenceTo>Penggunaan_Dana__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>