force-app/main/default/objects/Survey__c/fields/Peralatan_dan_Machine__c.field-meta.xml
<CustomField>
    <fullName>Peralatan_dan_Machine__c</fullName>
    <label>Peralatan dan Machine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>