force-app/main/default/objects/Survey__c/fields/Piutang_Lain_Lain__c.field-meta.xml
<CustomField>
    <fullName>Piutang_Lain_Lain__c</fullName>
    <label>Piutang Lain - Lain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>