force-app/main/default/objects/Survey__c/fields/Potong_Funding_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Potong_Funding_Agreement__c</fullName>
    <label>Potong Funding Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>