force-app/main/default/objects/Survey__c/fields/potong_funding_confins_app_id__c.field-meta.xml
<CustomField>
    <fullName>potong_funding_confins_app_id__c</fullName>
    <label>potong funding confins app id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>