force-app/main/default/objects/Survey__c/fields/PRE_Estimasi_Harga_Pembanding_3__c.field-meta.xml
<CustomField>
    <fullName>PRE_Estimasi_Harga_Pembanding_3__c</fullName>
    <label>Estimasi Harga Pembanding 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>