force-app/main/default/objects/Survey__c/fields/PRE_LTV__c.field-meta.xml
<CustomField>
    <fullName>PRE_LTV__c</fullName>
    <formula>Opportunity__r.NTF_Pengajuan__c /  PRE_Average_Data_pembanding__c /100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTV</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>