force-app/main/default/objects/Survey__c/fields/PRE_Warn_60percent__c.field-meta.xml
<CustomField>
    <fullName>PRE_Warn_60percent__c</fullName>
    <formula>IF(  PRE_LTV__c*100 &gt; 60/100 ,
&quot;LTV-Over&quot;,
&quot;&quot;
)</formula>
    <label>[PRE] warn60</label>
    <type>Text</type>
</CustomField>