force-app/main/default/objects/Survey__c/fields/Premi_Asuransi_Kebakaran__c.field-meta.xml
<CustomField>
    <fullName>Premi_Asuransi_Kebakaran__c</fullName>
    <label>Premi Asuransi Kebakaran</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>