force-app/main/default/objects/Survey__c/fields/Premi_Santunan__c.field-meta.xml
<CustomField>
    <fullName>Premi_Santunan__c</fullName>
    <label>Premi Santunan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>