force-app/main/default/objects/Survey__c/fields/Product_Offering__c.field-meta.xml
<CustomField>
    <fullName>Product_Offering__c</fullName>
    <label>Product Offering</label>
    <length>255</length>
    <type>Text</type>
</CustomField>