force-app/main/default/objects/Survey__c/fields/Promise_Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>Promise_Survey_Status__c</fullName>
    <formula>Opportunity__r.Status_Janji_Survey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Janji Survey</label>
    <type>Text</type>
</CustomField>