force-app/main/default/objects/Survey__c/fields/Provision_Fee__c.field-meta.xml
<CustomField>
    <fullName>Provision_Fee__c</fullName>
    <label>Provision Fee (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>