force-app/main/default/objects/Survey__c/fields/Provision_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Provision_Fee_Amount__c</fullName>
    <label>Provision Fee (Amount)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>