force-app/main/default/objects/Survey__c/fields/Purpose_of_Financing_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Financing_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purpose of Financing</label>
    <referenceTo>Purpose_of_Financing__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>