force-app/main/default/objects/Survey__c/fields/Quick_Ratio_Acid_Tes_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Quick_Ratio_Acid_Tes_Ratio__c</fullName>
    <label>Quick Ratio/Acid Tes Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>