force-app/main/default/objects/Survey__c/fields/Reason_Info_Negative__c.field-meta.xml
<CustomField>
    <fullName>Reason_Info_Negative__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Palsu</fullName>
            </value>
            <value>
                <fullName>Hasil Credit Checking Negative</fullName>
            </value>
            <value>
                <fullName>Kontrak Atas Nama</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>