force-app/main/default/objects/Survey__c/fields/Request_Pencairan_Pertama__c.field-meta.xml
<CustomField>
    <fullName>Request_Pencairan_Pertama__c</fullName>
    <label>Request Pencairan Pertama</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>