force-app/main/default/objects/Survey__c/fields/Return_on_Equity__c.field-meta.xml
<CustomField>
    <fullName>Return_on_Equity__c</fullName>
    <label>Return on Equity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>