force-app/main/default/objects/Survey__c/fields/Return_Type__c.field-meta.xml
<CustomField>
    <fullName>Return_Type__c</fullName>
    <description>Picklist : Return Type ( Jenis Perubahan)</description>
    <label>Jenis Perubahan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Structural</fullName>
                <default>true</default>
                <label>Non Structural</label>
            </value>
            <value>
                <fullName>Structural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>