force-app/main/default/objects/Survey__c/fields/Seller_RW__c.field-meta.xml
<CustomField>
    <fullName>Seller_RW__c</fullName>
    <label>Seller_RW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>