force-app/main/default/objects/Survey__c/fields/SPAJK__c.field-meta.xml
<CustomField>
    <fullName>SPAJK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPAJK</label>
    <referenceTo>SPAJK__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>