force-app/main/default/objects/Survey__c/fields/Spouse_Biaya_Operasional__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Biaya_Operasional__c</fullName>
    <label>Spouse Biaya Operasional</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>