force-app/main/default/objects/Survey__c/fields/Spouse_Job_City_Kabupaten__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Job_City_Kabupaten__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spouse Job City / Kabupaten</label>
    <referenceTo>City_Master_Data__c</referenceTo>
    <relationshipLabel>Surveys (Spouse Job City / Kabupaten)</relationshipLabel>
    <relationshipName>Surveys3</relationshipName>
    <type>Lookup</type>
</CustomField>