force-app/main/default/objects/Survey__c/fields/Spouse_Job_Map_URL_Long__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Job_Map_URL_Long__c</fullName>
    <label>Spouse Job Map URL Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>