force-app/main/default/objects/Survey__c/fields/Spouse_Job_Province__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Job_Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spouse Job Province</label>
    <referenceTo>Province_Master_Data__c</referenceTo>
    <relationshipLabel>Surveys (Spouse Job Province)</relationshipLabel>
    <relationshipName>Surveys3</relationshipName>
    <type>Lookup</type>
</CustomField>