force-app/main/default/objects/Survey__c/fields/Spouse_Jumlah_Karyawan__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Jumlah_Karyawan__c</fullName>
    <label>Spouse Jumlah Karyawan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>