force-app/main/default/objects/Survey__c/fields/Spouse_Legalitas_Usaha__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Legalitas_Usaha__c</fullName>
    <label>Spouse Legalitas Usaha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Legalitas_usaha</valueSetName>
    </valueSet>
</CustomField>