force-app/main/default/objects/Survey__c/fields/Spouse_Lokasi_Usaha__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Lokasi_Usaha__c</fullName>
    <label>Spouse Lokasi Usaha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lokasi_usaha</valueSetName>
    </valueSet>
</CustomField>