force-app/main/default/objects/Survey__c/fields/Spouse_Nama_Usaha__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Nama_Usaha__c</fullName>
    <label>Spouse Nama Usaha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>