force-app/main/default/objects/Survey__c/fields/Spouse_Profesi_Berbahaya__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Profesi_Berbahaya__c</fullName>
    <label>Spouse Profesi Berbahaya</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Profesi_Berbahaya</valueSetName>
    </valueSet>
</CustomField>