force-app/main/default/objects/Survey__c/fields/Spouse_Profesi_Berbahaya_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Profesi_Berbahaya_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spouse Profesi Berbahaya</label>
    <referenceTo>Risk_Occupation_Master_Data__c</referenceTo>
    <relationshipLabel>Surveys (Spouse Profesi Berbahaya)</relationshipLabel>
    <relationshipName>Surveys1</relationshipName>
    <type>Lookup</type>
</CustomField>