force-app/main/default/objects/Survey__c/fields/Status_Input_Survey__c.field-meta.xml
<CustomField>
    <fullName>Status_Input_Survey__c</fullName>
    <defaultValue>&quot;Incomplete&quot;</defaultValue>
    <label>Input Survey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>