force-app/main/default/objects/Survey__c/fields/Sumber_Data_Pembanding_1__c.field-meta.xml
<CustomField>
    <fullName>Sumber_Data_Pembanding_1__c</fullName>
    <label>Sumber Data Pembanding 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>