force-app/main/default/objects/Survey__c/fields/Sumber_Data_Pembanding_2__c.field-meta.xml
<CustomField>
    <fullName>Sumber_Data_Pembanding_2__c</fullName>
    <label>Sumber Data Pembanding 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>