force-app/main/default/objects/Survey__c/fields/Surplus_Deficit_Income__c.field-meta.xml
<CustomField>
    <fullName>Surplus_Deficit_Income__c</fullName>
    <label>Surplus/Deficit Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>