force-app/main/default/objects/Survey__c/fields/Survey_Date_End__c.field-meta.xml
<CustomField>
    <fullName>Survey_Date_End__c</fullName>
    <defaultValue>Now() + 1 + (1/24)</defaultValue>
    <label>Survey Date End</label>
    <type>DateTime</type>
</CustomField>